Fix db, materials

--- a/StuffSite2/StuffSite2.csproj
+++ b/StuffSite2/StuffSite2.csproj
@@ -159,13 +159,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Database1.mdf" />
-    <Content Include="App_Data\Database1_log.ldf">
-      <DependentUpon>Database1.mdf</DependentUpon>
-    </Content>
-    <Content Include="App_Data\testDB.mdf" />
-    <Content Include="App_Data\testDB_log.ldf">
-      <DependentUpon>testDB.mdf</DependentUpon>
+    <Content Include="App_Data\Prod.mdf" />
+    <Content Include="App_Data\Prod_log.ldf">
+      <DependentUpon>Prod.mdf</DependentUpon>
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -194,7 +190,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -214,10 +212,10 @@
     <Content Include="Views\Home\Materials.cshtml" />
     <Content Include="Views\Materials\Index.cshtml" />
     <Content Include="Views\Materials\_MaterialsPartishal.cshtml" />
+    <Content Include="Views\Home\_PartialMaterials.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="videos\" />
-    <Folder Include="Views\test\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
