--- a/StuffSite2/Web.config
+++ b/StuffSite2/Web.config
@@ -69,7 +69,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DB1" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\StuffSite\StuffSite\StuffSite2\App_Data\Database1.mdf;Integrated Security=True"
+    <add name="ProductsDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\StuffSite\StuffSite\StuffSite2\App_Data\Prod.mdf;Integrated Security=True"
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
